# cd-lab

./: CMakeLists.txt  README.md  exec_newtest  exec_simple_test  function_metrics.csv  instrumented_exec  instrumented_newtest.c  instrumented_simple_test.c  newtest.c  run_pipeline.sh  test_program  testprog
runtime/: runtime.c  runtime.h
test/: instrumented_output.c  simple_test.c
tool/: CMakeLists.txt  Instrumentor.cpp
